@@ -1,20 +1,20 @@
 package io.anuke.arc.util;
 
-import io.anuke.arc.Core;
-import io.anuke.arc.files.FileHandle;
-import io.anuke.arc.util.reflect.ClassReflection;
-import io.anuke.arc.util.reflect.Method;
+import io.anuke.arc.*;
+import io.anuke.arc.files.*;
+
+import java.lang.reflect.*;
 
 public class ScreenRecorder{
     private static Runnable record;
 
     static{
         try{
-            Class<?> recorderClass = ClassReflection.forName("io.anuke.arc.recorder.GifRecorder");
-            Object recorder = ClassReflection.getConstructor(recorderClass).newInstance();
-            Method method = ClassReflection.getMethod(recorderClass, "setExportDirectory", FileHandle.class);
+            Class<?> recorderClass = Class.forName("io.anuke.arc.recorder.GifRecorder");
+            Object recorder = recorderClass.getConstructor().newInstance();
+            Method method = recorderClass.getMethod("setExportDirectory", Fi.class);
             method.invoke(recorder, Core.files.local("../../desktop/gifexport"));
-            Method r = ClassReflection.getMethod(recorderClass, "update");
+            Method r = recorderClass.getMethod("update");
             Object[] args = {};
             record = () -> {
                 try{
